@@ -3,7 +3,6 @@ Priority list:
 1-9 as in vim (9=required for next release, 5=would be nice, 1=probably not)
 
 BUGS:
-- multiple windows do not work at all, so :q will close the whole browser session, even when there are other windows which has tabs
 - http://en.wikipedia.org/wiki/Portal:Current_events - 'f' shows more hints than 'F' (on left side of nav bar)
 - dpb| 09:09:56  dpb :: when I save a page with vimperator, it adds <hints
      id="hah_hints"></hints> near the end of it.. kinda annoying
@@ -24,6 +23,9 @@ FEATURES:
 7 use ctrl-n/p in insert mode for word completion
 7 [ctrl-o/i] to Go back to a Previous Position (done partly, however currenty does not use a per tab jumplist)
 7 whereever possible: get rid of dialogs and ask console-like dialog questions or write error prompts directly on the webpage or with :echo()
+7 :set! should also set about:config options (with autocomplete)
+7 edit textareas with an external editor (https://addons.mozilla.org/en-US/firefox/addon/4125)
+6 use '' to jump between marks like vim
 6 downloading of links to filesystem (:save <filename>)
 6 autocommands (BrowserStart, BrowserQuit, TabClose, TabOpen, TabChanged, PageLoaded, any more?)
 6 vim like mappings for caret mode and textboxes (i to start caret mode?)
@@ -33,18 +35,15 @@ FEATURES:
 6 gf = view source?
 6 page info support (ctrl-g, g<C-g>)
 5 Use arrow keys in preview window, and ctrl-w+j/k to switch to from preview window
-5 Sort :open completion by date? (use 'wildsort')
+5 Favicons in completion windows and some other places?
 5 make use of the ] and [ keys to e.g. jump to the next heading ]], next image ]i, previous textbox [t and so on
 5 add tag and keyword support to adding/deleting bookmarks
-4 Support multiple top-level windows?
 3 Splitting Windows with [:sp :vsp ctrl-w,s ctrl-w,v] and closing with [ctrl-w,q], moving with [ctrl-w,w or tab]
   have a look into the split browser extension
-3 :set! should also set about:config options (with autocomplete)
 - many other ideas are listed in the wiki
 
 RANDOM IDEAS:
 * numbered tabs
-* https://addons.mozilla.org/en-US/firefox/addon/4125 - use vim to edit text fields
 * Would it be possible to add a setting "maxcompletionsshown" and 
   "maxpreviewwindowheight" or something like this?
 * 16:06:04       bartman| maxauthority: feature idea: what if :n and :N searched the 
